--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Monochromed by TEMPLATED
-    templated.co @templatedco
-    Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
 <html>
 	<head>
-		<title>Monochromed by TEMPLATED</title>
+		<title>Tushar Mittal | Proffessional Resume</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -31,8 +26,8 @@
 					
 				<!-- Logo -->
 					<div id="logo">
-						<h1><a href="#">Monochromed</a></h1>
-						<span>Design by TEMPLATED</span>
+						<h1><a href="#">Tushar Mittal</a></h1>
+						<span>Chembio major, Computer Science minor</span>
 					</div>
 				
 				<!-- Nav -->
