--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<!-- Logo -->
 					<div id="logo">
 						<h1><a href="#">Tushar Mittal</a></h1>
-						<span>Chembio major, Computer Science minor</span>
+						<span>Major: Chemical Biology, Minor: Computer Science</span>
 					</div>
 				
 				<!-- Nav -->
