--- a/index.html
+++ b/index.html
@@ -56,28 +56,28 @@
 						<section>
 							<a href="#" class="image full"><img src="images/pics01.jpg" alt="" /></a>
 							<p>Quisque dictum. Pellentesque viverra  enim. Integer nisl risus, sagittis convallis, rutrum id, elementum.</p>
-							<a href="#" class="button">Read More</a>
+							<a href="#" class="button">Download</a>
 						</section>
 					</div>
 					<div class="3u">
 						<section>
 							<a href="#" class="image full"><img src="images/pics11.jpg" alt="" /></a>
 							<p>Pellentesque viverra  enim. Tristique ante ut risus. Quisque dictum. Integer sagittis convallis elementum.</p>
-							<a href="#" class="button">Read More</a>
+							<a href="#" class="button">Download</a>
 						</section>
 					</div>
 					<div class="3u">
 						<section>
 							<a href="#" class="image full"><img src="images/pics12.jpg" alt="" /></a>
 							<p>Pellentesque viverra  enim. Quisque dictum. Integer nisl risus, sagittis convallis, rutrum id, elementum.</p>
-							<a href="#" class="button">Read More</a>
+							<a href="#" class="button">Download</a>
 						</section>
 					</div>
 					<div class="3u">
 						<section>
 							<a href="#" class="image full"><img src="images/pics13.jpg" alt="" /></a>
 							<p>Tristique ante ut risus. Quisque dictum. Integer nisl risus, sagittis convallis elementum.</p>
-							<a href="#" class="button">Read More</a>
+							<a href="#" class="button">Download</a>
 						</section>
 					</div>
 				</div>
@@ -102,12 +102,12 @@
 						<div id="sidebar" class="4u">
 							<section>
 								<header>
-									<h2>Gravida praesent</h2>
-									<span class="byline">Praesent lacus congue rutrum</span>
+									<h2>Press Releases</h2>
+									<span class="byline">From 2010, 2014</span>
 								</header>
-								<p>Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum. Maecenas luctus lectus at sapien. Consectetuer adipiscing elit.</p>
+								<!--<p>Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum. Maecenas luctus lectus at sapien. Consectetuer adipiscing elit.</p> -->
 								<ul class="default">
-									<li><a href="#">Pellentesque quis lectus gravida blandit.</a></li>
+									<li><a href="http://www.khabar.com/magazine/community-newsmakers/tushar_mittal_among_high_school_students_excelling_in_science" target="_blank">Indian American community article.</a></li>
 									<li><a href="#">Lorem ipsum consectetuer adipiscing elit.</a></li>
 									<li><a href="#">Phasellus nec nibh pellentesque congue.</a></li>
 									<li><a href="#">Cras aliquam risus pellentesque pharetra.</a></li>
