--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
 						<div class="8u skel-cell-important">
 							<section id="content">
 								<header>
-									<h2>Integer gravida nibh quis urna</h2>
-									<span class="byline">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum</span>
+									<h2>About Me</h2>
+									<span class="byline">"Success is never owned it is rented, and the rent is due every day" ~	Rory Vaden</span>
 								</header>
-								<p><a href="#" class="image full"><img src="images/pics02.jpg" alt=""></a></p>
+								<p><img src="images/pics02.jpg" alt=""></p>
 								<p>This is <strong>Monochromed</strong>, a responsive HTML5 site template freebie by <a href="http://templated.co">TEMPLATED</a>. Released for free under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so use it for whatever (personal or commercial) &ndash; just give us credit! Check out more of our stuff at <a href="http://templated.co">our site</a> or follow us on <a href="http://twitter.com/templatedco">Twitter</a>.</p>
 								<a href="#" class="button">Read More</a>
 							</section>
@@ -105,14 +105,9 @@
 									<h2>Press Releases</h2>
 									<span class="byline">From 2010, 2014</span>
 								</header>
-								<!--<p>Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum. Maecenas luctus lectus at sapien. Consectetuer adipiscing elit.</p> -->
 								<ul class="default">
 									<li><a href="http://www.khabar.com/magazine/community-newsmakers/tushar_mittal_among_high_school_students_excelling_in_science" target="_blank">Indian American community article.</a></li>
-									<li><a href="#">Lorem ipsum consectetuer adipiscing elit.</a></li>
-									<li><a href="#">Phasellus nec nibh pellentesque congue.</a></li>
-									<li><a href="#">Cras aliquam risus pellentesque pharetra.</a></li>
-									<li><a href="#">Duis non metus commodo euismod lobortis.</a></li>
-									<li><a href="#">Lorem ipsum dolor adipiscing elit.</a></li>
+									
 								</ul>
 							</section>
 						</div>
