--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<div id="main">
 			<div class="container">
 				<header>
-					<h2>Gravida nibh quis urna</h2>
+					<h2>Projects</h2>
 				</header>
 				<div class="row">
 					<div class="3u">
