--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Tushar Mittal | Proffessional Resume</title>
+		<title>Tushar Mittal | Professional Resume</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -50,6 +50,40 @@
 			<div class="container">
 				<header>
 					<h2>Projects</h2>
+				</header>
+				<div class="row">
+					<div class="3u">
+						<section>
+							<a href="#" class="image full"><img src="images/pics01.jpg" alt="" /></a>
+							<p>Quisque dictum. Pellentesque viverra  enim. Integer nisl risus, sagittis convallis, rutrum id, elementum.</p>
+							<a href="#" class="button">Download</a>
+						</section>
+					</div>
+					<div class="3u">
+						<section>
+							<a href="#" class="image full"><img src="images/pics11.jpg" alt="" /></a>
+							<p>Pellentesque viverra  enim. Tristique ante ut risus. Quisque dictum. Integer sagittis convallis elementum.</p>
+							<a href="#" class="button">Download</a>
+						</section>
+					</div>
+					<div class="3u">
+						<section>
+							<a href="#" class="image full"><img src="images/pics12.jpg" alt="" /></a>
+							<p>Pellentesque viverra  enim. Quisque dictum. Integer nisl risus, sagittis convallis, rutrum id, elementum.</p>
+							<a href="#" class="button">Download</a>
+						</section>
+					</div>
+					<div class="3u">
+						<section>
+							<a href="#" class="image full"><img src="images/pics13.jpg" alt="" /></a>
+							<p>Tristique ante ut risus. Quisque dictum. Integer nisl risus, sagittis convallis elementum.</p>
+							<a href="#" class="button">Download</a>
+						</section>
+					</div>
+				</div>
+				<div class="divider">&nbsp;</div>
+				<header>
+					<h2>Contact Us</h2>
 				</header>
 				<div class="row">
 					<div class="3u">
