--- a/index.html
+++ b/index.html
@@ -86,31 +86,9 @@
 					<h2>Contact Us</h2>
 				</header>
 				<div class="row">
-					<div class="3u">
+					<div class="12u skel-cell-important">
 						<section>
-							<a href="#" class="image full"><img src="images/pics01.jpg" alt="" /></a>
 							<p>Quisque dictum. Pellentesque viverra  enim. Integer nisl risus, sagittis convallis, rutrum id, elementum.</p>
-							<a href="#" class="button">Download</a>
-						</section>
-					</div>
-					<div class="3u">
-						<section>
-							<a href="#" class="image full"><img src="images/pics11.jpg" alt="" /></a>
-							<p>Pellentesque viverra  enim. Tristique ante ut risus. Quisque dictum. Integer sagittis convallis elementum.</p>
-							<a href="#" class="button">Download</a>
-						</section>
-					</div>
-					<div class="3u">
-						<section>
-							<a href="#" class="image full"><img src="images/pics12.jpg" alt="" /></a>
-							<p>Pellentesque viverra  enim. Quisque dictum. Integer nisl risus, sagittis convallis, rutrum id, elementum.</p>
-							<a href="#" class="button">Download</a>
-						</section>
-					</div>
-					<div class="3u">
-						<section>
-							<a href="#" class="image full"><img src="images/pics13.jpg" alt="" /></a>
-							<p>Tristique ante ut risus. Quisque dictum. Integer nisl risus, sagittis convallis elementum.</p>
 							<a href="#" class="button">Download</a>
 						</section>
 					</div>
