--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
 				<div class="row">
 					<div class="12u skel-cell-important">
 						<section>
-							<p>Quisque dictum. Pellentesque viverra  enim. Integer nisl risus, sagittis convallis, rutrum id, elementum.</p>
-							<a href="#" class="button">Download</a>
+							<p>Email: <a href="mailto:tmittal947@gmail.com">tmittal947@gmail.com</a> <a></a></p>
 						</section>
 					</div>
 				</div>
