--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				<div class="row">
 					<div class="12u skel-cell-important">
 						<section>
-							<p>Email: <a href="mailto:tmittal947@gmail.com">tmittal947@gmail.com</a> <a></a></p>
+							<p>Email: <a href="mailto:tmittal947@gmail.com">tmittal947@gmail.com</a> LinkedI<a></a></p>
 						</section>
 					</div>
 				</div>
