--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				<header>
 					<h2>Contact Us</h2>
 				</header>
-				<div class="row">
+				<div class="row" style="text-align: center; ">
 					<div class="12u skel-cell-important">
 						<section>
 							<p>Email: <a href="mailto:tmittal947@gmail.com">tmittal947@gmail.com</a> LinkedI<a></a></p>
