--- a/index.html
+++ b/index.html
@@ -85,10 +85,12 @@
 				<header>
 					<h2>Contact Us</h2>
 				</header>
-				<div class="row" style="text-align: center; ">
+				<div class="row">
 					<div class="12u skel-cell-important">
 						<section>
-							<p>Email: <a href="mailto:tmittal947@gmail.com">tmittal947@gmail.com</a> LinkedI<a></a></p>
+							<p>Email: <a href="mailto:tmittal947@gmail.com">tmittal947@gmail.com</a></p>
+							<p>LinkedIn: <a href="https://www.linkedin.com/pub/tushar-mittal/6a/44b/9ba" target="_blank">Profile Page</a></p>
+							<p>Sophomore, UC Berkeley</p>
 						</section>
 					</div>
 				</div>
