--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				</div>
 				<div class="divider">&nbsp;</div>
 				<header>
-					<h2>Contact Us</h2>
+					<h2>Contact Me</h2>
 				</header>
 				<div class="row">
 					<div class="12u skel-cell-important">
